web/libraries/fractal/components/tests/filter/pass/length.twig
{% set array = [ 1, 2, 3, 4, 5, 6 ] %}

{% if array|length > 5 %}
  {{ array|length }}
{% endif %}
