web/libraries/fractal/components/tests/filter/fail/reduce.twig
{% set numbers = [1, 2, 3] %}

{{ numbers|reduce((carry, v) => carry + v) }} <br>
{# output 6 #}

{{ numbers|reduce((carry, v) => carry + v, 10) }}
{# output 16 #}
